--- a/.github/workflows/repo-contributor.yml
+++ b/.github/workflows/repo-contributor.yml
@@ -1,4 +1,4 @@
-name: Generate Contributors by Categories
+name: All Contributors
 
 on:
     push:
@@ -14,20 +14,15 @@ jobs:
             contents: write
 
         steps:
-            - name: Contributors by categories
+            - name: Contributors (All)
               uses: lowlighter/metrics@latest
               with:
                   token: ${{ secrets.METRIC_TOKEN }}
                   user: raj8664
                   repo: Prep
-                  template: repository
                   base: ''
-                  filename: metrics.plugin.contributors.categories.svg
+                  template: repository
+                  filename: metrics.plugin.contributors.svg
                   plugin_contributors: yes
-                  plugin_contributors_sections: categories
-                  plugin_contributors_categories: |
-                      {
-                        "🧩 Plugins / 🖼️ templates": ["source/plugins/**", "source/templates/**"],
-                        "📚 Documentation": ["README.md", "**/README.md", "**/metadata.yml"],
-                        "💻 Code (other)": ["source/**", "Dockerfile"]
-                      }
+                  plugin_contributors_sections: contributors
+                  plugin_contributors_base: main
