--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"docs:dev": "vitepress dev",
+		"start":"vitepress dev",
 		"docs:build": "vitepress build",
 		"docs:preview": "vitepress preview"
 	},
